--- a/css/_header.scss
+++ b/css/_header.scss
@@ -19,7 +19,7 @@ header {
         &::after {
           position: absolute;
           bottom: -5px;
-          content: '';
+          content: "";
           background-color: #0b5fff;
           width: 83px;
           height: 4px;
